--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
+    "@types/styled-components": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "typescript": "^3.7.3"
+    "styled-components": "^4.4.1",
+    "typescript": "^3.7.3",
+    "use-debounce": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
