--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.1",
+    "i18next": "^19.0.3",
     "node-xlsx": "^0.15.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.1",
     "react-scripts": "3.3.0",
     "styled-components": "^4.4.1",
     "typescript": "^3.7.3",
